[package]
name = "github_repo_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
git2 = "0.13"
dotenv = "0.15.0"
clap = "3.0"
walkdir = "2.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"